--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <h1>MAY Plastik Siparişler</h1>
     </header>
     <div class="menu-buttons">
-        <a href="liste.html" class="menu-btn" >📋 Liste</a>
+        <a href="liste.html" class="menu-btn" >📋 Liste(Sipariş Kaydı)</a>
         <a href="musteriler.html" class="menu-btn" >👥 Müşteriler</a>
         <a href="urunlerebak.html" class="menu-btn" >📦 Ürünler</a>
         <a href="urunler.html" class="menu-btn" >➕ Ürün Ekle</a>
